corrigindo docs do swagger
