# docs/swagger.json
@@ -56,6 +56,17 @@
                     "debts"
                 ],
                 "summary": "Update a debt",
+                "parameters": [
+                    {
+                        "description": "Request body to update debt",
+                        "name": "debt",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/debt.BodyUpdateDebt"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -102,7 +113,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/debt.InputNewDebt"
+                            "$ref": "#/definitions/debt.BodyNewDebt"
                         }
                     }
                 ],
@@ -147,6 +158,17 @@
                     "debts"
                 ],
                 "summary": "Set a debt paid/unpaid",
+                "parameters": [
+                    {
+                        "description": "Update debt payment status",
+                        "name": "debt",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/debt.BodyUpdateDebtPaymentStatus"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -191,7 +213,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Debt ID",
+                        "description": "ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -396,6 +418,60 @@
         }
     },
     "definitions": {
+        "debt.BodyNewDebt": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "dueDate": {
+                    "type": "string",
+                    "example": "2024-12-25"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "debt.BodyUpdateDebt": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "dueDate": {
+                    "type": "string",
+                    "example": "2024-12-25"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "paymentDate": {
+                    "type": "string",
+                    "example": "2024-12-25"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "debt.BodyUpdateDebtPaymentStatus": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "paid": {
+                    "type": "boolean"
+                }
+            }
+        },
         "debt.Debt": {
             "type": "object",
             "required": [
@@ -427,30 +503,6 @@
                 "paymentDate": {
                     "type": "string",
                     "example": "2024-12-25"
-                },
-                "value": {
-                    "type": "number"
-                }
-            }
-        },
-        "debt.InputNewDebt": {
-            "type": "object",
-            "required": [
-                "description",
-                "dueDate",
-                "name",
-                "value"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "dueDate": {
-                    "type": "string",
-                    "example": "2024-12-25"
-                },
-                "name": {
-                    "type": "string"
                 },
                 "value": {
                     "type": "number"
