# internal/domain/schemas/debt/debt.go
@@ -5,14 +5,22 @@ import (
 	uuid "github.com/satori/go.uuid"
 )
 
-type InputUpdatePaymentStatus struct {
-	ID   uuid.UUID `json:"id"`
-	Paid bool      `json:"paid"`
-}
-
-type InputNewDebt struct {
+type BodyNewDebt struct {
 	Name        string      `json:"name"`
 	Description string      `json:"description"`
 	Value       float64     `json:"value"`
 	DueDate     carbon.Date `json:"dueDate" swaggertype:"string" example:"2024-12-25"`
+}
+
+type BodyUpdateDebt struct {
+	ID          uuid.UUID   `json:"id"`
+	Name        string      `json:"name"`
+	Description string      `json:"description"`
+	Value       float64     `json:"value"`
+	DueDate     carbon.Date `json:"dueDate" swaggertype:"string" example:"2024-12-25"`
+	PaymentDate carbon.Date `json:"paymentDate" swaggertype:"string" example:"2024-12-25"`
+}
+type BodyUpdateDebtPaymentStatus struct {
+	ID   uuid.UUID `json:"id"`
+	Paid bool      `json:"paid"`
 }
